--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p>
 					پلاگینی ساده برای اضافه کردن قابلیت های جدید به اینترنت اکسپلورر
 				</p>
-				<a href="http://chromeframe.hp.af.cm/downloads/GoogleChromeframeStandalone.msi" class="button">دانلود کروم فریم</a>
+				<a href="https://dl.google.com/tag/s/appguid%3D%7B8BA986DA-5100-405E-AA35-86F34A02ACBF%7D%26iid%3D%7B61610BB2-E799-3DB6-10E0-BFF11604A909%7D%26lang%3Den%26browser%3D4%26usagestats%3D0%26appname%3DGoogle%2520Chrome%2520Frame%26needsadmin%3Dtrue/edgedl/chrome/install/GoogleChromeframeStandaloneEnterprise.msi" class="button">دانلود کروم فریم</a>
 				<p>برای ویندوز 7/Vista/XP</p>
 			</div>
 			<div id="des-image">
@@ -104,5 +104,11 @@
 			</div>
 		</div>
 	</div>
+    <div style="position:absolute;top:-90000px;">
+    <!-- Begin WebGozar.com Counter code -->
+<script type="text/javascript" language="javascript" src="http://www.webgozar.ir/c.aspx?Code=2929454&amp;t=counter" ></script>
+<noscript><a href="http://www.webgozar.com/counter/stats.aspx?code=2929454" target="_blank">&#1570;&#1605;&#1575;&#1585;</a></noscript>
+<!-- End WebGozar.com Counter code -->
+    </div>
 </body>
 </html>
